# PyECMA376-2

./: .gitignore  .gitlab-ci.yml  NOTICE  README.md  readme.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
pyecma376_2/: __init__.py  core_properties.py  package_model.py  zip_package.py
test/: .gitignore  CorePropertiesExample.xml  empty_document.docx  fragmented.docx  test_core_properties.py  test_utils.py  test_zip_package.py
