[metadata]
name = pyecma376-2
version = 1.0.1
author = Chair of Information and Automation Systems for Process and Material Technology, RWTH Aachen University
author_email = contact@plt.rwth-aachen.de
url = https://github.com/acplt/PyECMA376-2
project_urls =
    Source = https://github.com/acplt/PyECMA376-2
    Tracker = https://github.com/acplt/PyECMA376-2/issues
description = Library for reading and writing ECMA 376-2 (Open Packaging Conventions) files
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = NOTICE, LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable

[options]
packages = pyecma376_2
python_requires = >=3.9
zip_safe = False
install_requires =
    lxml>=4.2,<5

[options.package_data]
pyecma376_2 = py.typed
